# jupyter-workflow

./: .gitignore  .prettierignore  .travis.yml  Makefile  README.md  codecov.yml  eslint.config.mjs  install.json  jest.config.mjs  lint-requirements.txt  package-lock.json  package.json  prettier.config.mjs  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  stylelint.config.mjs  test-requirements.txt  tox.ini  tsconfig.json
.github/: dependabot.yml
.github/codeql/: config.yml
.github/workflows/: ci-tests.yml  github-release.yml  pypi.yaml  release.yml  tests.yaml
docs/: .wci.yml  requirements.txt
docs/source/: conf.py  index.rst  reference.rst
examples/1000-genome/: README.md  run
examples/1000-genome/docker/1000-genome/: Dockerfile  build
examples/1000-genome/docker/1000-genome-notebook/: Dockerfile  build
examples/1000-genome/k8s/: manifest.yaml
examples/1000-genome/times/: bar_chart.plt  plot.sh
examples/1000-genome/work/: 1000-genome.ipynb
examples/1000-genome/work/data/: download_data.sh
examples/1000-genome/work/environment/k8s/1000-genome/: Chart.yaml  values.yaml
examples/1000-genome/work/environment/k8s/1000-genome/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
examples/claire-covid/: README.md  node-details.txt  run
examples/claire-covid/docker/: Dockerfile  build
examples/claire-covid/singularity/ppcle64/: build  claire-covid.def  pytorch.def
examples/claire-covid/times/: bar_chart.plt  plot.sh
examples/claire-covid/work/: claire-covid.ipynb
examples/claire-covid/work/environment/cineca-marconi100/: slurm_template.jinja2
examples/quantum-espresso/: README.md  node-details.txt  run
examples/quantum-espresso/docker/: Dockerfile  build
examples/quantum-espresso/work/: quantum-espresso.ipynb
examples/quantum-espresso/work/INPDIR/: h2o.in.00  h2o.in.03.b0  h2o.in.03.b1  h2o.in.03.b2
examples/quantum-espresso/work/car-parrinello/: car-parrinello.ipynb
examples/quantum-espresso/work/car-parrinello/INPDIR/: h2o.in.01  h2o.in.02
examples/quantum-espresso/work/car-parrinello/environment/: pbs_espresso
examples/quantum-espresso/work/primordial-soup/: primordial-soup.ipynb
examples/quantum-espresso/work/primordial-soup/INPDIR/: chno.in.00  chno.in.01  chno.in.02  chno.in.03  chno.in.04.t1  chno.in.04.t2  chno.in.05.t1.p1  chno.in.05.t1.p2  chno.in.05.t2.p1  chno.in.05.t2.p2
examples/quantum-espresso/work/primordial-soup/environment/: pbs_espresso
examples/ray/: ray_map_reduce.ipynb
examples/ray/helm/ray/: Chart.yaml  values.yaml
examples/ray/helm/ray/templates/: _helpers.tpl  head-deployment.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
examples/tensorflow/: README.md  run  serving-container-details.txt  tf-serve.ipynb  training-node-details.txt
examples/tensorflow/docker/tensorflow-notebook/: Dockerfile  build
examples/tensorflow/docker/tensorflow-serving/: Dockerfile  build
examples/tensorflow/work/: tf-serve.ipynb
examples/tensorflow/work/environment/hpc/: ssh_template.jinja2
examples/tensorflow/work/environment/k8s/tensorflow-serving/: Chart.yaml  values.yaml
examples/tensorflow/work/environment/k8s/tensorflow-serving/templates/: NOTES.txt  deployment.yaml  pvc.yaml
jupyter-config/server-config/: jupyter-workflow.json
jupyter_workflow/: __init__.py  handlers.py  version.py
jupyter_workflow/client/: cli.py  client.py
jupyter_workflow/config/: config.py  schema.py  validator.py
jupyter_workflow/config/schemas/v1.0/: config_schema.json  helm3.json
jupyter_workflow/frontend/src/executor/: cellexecutor.ts  index.ts
jupyter_workflow/ipython/: __main__.py  displayhook.py  executor.py  install.py  iostream.py  ipkernel.py  shell.py
jupyter_workflow/ipython/kernelspec/: kernel.js
jupyter_workflow/streamflow/: combinator.py  command.py  executor.py  port.py  processor.py  step.py  token.py  token_processor.py  transformer.py  translator.py  utils.py  workflow.py
schema/: plugin.json
src/: index.ts
src/command/: index.ts  messages.ts  workflow.ts
src/editor/: editor.ts  index.ts  widgets.tsx
src/executor/: cellexecutor.ts  index.ts
src/handlers/: index.ts
src/icon/: iconimports.ts  icons.ts  index.ts
tests/: conftest.py  test_notebook.py  test_serializer.py  test_single_cell.py
tests/testdata/: background_cell.ipynb  file_deps.ipynb  file_read.py  file_rw.py  hello.txt  interactive_sum.py  list_param_sum.py  list_sum.py  name_deps.ipynb  param_overwrite.ipynb  scatter_and_non_scatter_sequences.ipynb  scatter_deps.ipynb  serialization.ipynb  simple_scatter_sequence.ipynb  sum.py  two_lists_sum.py  two_steps_single_dep.ipynb
