[build-system]
requires = ["hatchling", "jupyterlab", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "jupyter-workflow"
authors = [
    {name = "Iacopo Colonnelli", email = "iacopo.colonnelli@unito.it"}
]
description = "Jupyter Workflow Kernel"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing"
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.scripts]
jupyter-workflow = "jupyter_workflow.client.cli:main"

[project.urls]
Homepage = "https://jupyter-workflow.di.unito.it"
Package = "https://pypi.org/project/jupyter-workflow"
Repository = "https://github.com/alpha-unito/jupyter-workflow"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "jupyter_workflow/frontend/src"
build_dir = "labextension"

[tool.hatch.build.targets.sdist]
include = [
    "jupyter_workflow/**/*.py",
]
artifacts  = ["labextension"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
bandit = ["bandit-requirements.txt"]
docs = ["docs/requirements.txt"]
lint = ["lint-requirements.txt"]
test = ["test-requirements.txt"]

[tool.hatch.version]
source = "jupyter_workflow/version.py"

[tool.setuptools.package-data]
"jupyter_workflow.config" = ["schemas/v1.0/*.json"]
"jupyter_workflow.ipython" = ["kernelspec/kernel.js"]

[tool.codespell]
ignore-words-list = "inout"

[tool.coverage.paths]
executor = [
    "jupyter_workflow/streamflow/executor.py",
    "/tmp/streamflow/*/executor.py"
]

[tool.coverage.run]
branch = true
source_pkgs = ["jupyter_workflow"]

[tool.coverage.report]
exclude_lines = [
    # Exclude not implemented methods
    "raise NotImplementedError",
    # Exclude abstract methods
    "@(abc\\.)?abstractmethod",
    # Exclude Python script entrypoints
    "if __name__ == .__main__.:",
    # Exclude type checking lines
    "if TYPE_CHECKING:",
    # Exclude log messages
    "if logger.isEnabledFor"
]
ignore_errors = true
omit = [
    "jupyter_workflow/ipython/__main__.py",
    "tests/*"
]

[tool.isort]
profile = "black"