[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-workflow"
authors = [
    {name = "Iacopo Colonnelli", email = "iacopo.colonnelli@unito.it"}
]
description = "Jupyter Workflow Kernel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    "cloudpickle==3.1.2",
    "ipython_genutils==0.2.0",
    "ipykernel==6.29.5",
    "jsonref==1.1.0",
    "jupyter_client==8.8.0",
    "nbclient==0.10.4",
    "nbformat==5.10.4",
    "streamflow==0.2.0.dev13",
    "traitlets==5.14.3"
]
version = "0.1.0.dev4"

[project.scripts]
jupyter-workflow = "jupyter_workflow.client.cli:main"

[project.urls]
Homepage = "https://jupyter-workflow.di.unito.it"
Package = "https://pypi.org/project/jupyter-workflow"
Repository = "https://github.com/alpha-unito/jupyter-workflow"

[dependency-groups]
dev = [
    {include-group = "bandit"},
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"}
]
bandit = [
    "bandit==1.9.3"
]
docs = [
    "sphinx==8.1.3",
    "sphinx-jsonschema==1.19.2",
    "sphinx-rtd-theme==3.1.0"
]
lint = [
    "black==26.1.0",
    "codespell==2.4.1",
    "flake8-bugbear==25.11.29",
    "isort==7.0.0",
    "pyupgrade==3.21.2"
]
test = [
    "coverage[toml]==7.10.7",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "testbook==0.4.2"
]


[tool.setuptools]
packages = [
    "jupyter_workflow",
    "jupyter_workflow.client",
    "jupyter_workflow.config",
    "jupyter_workflow.ipython",
    "jupyter_workflow.streamflow",
]
zip-safe = true

[tool.setuptools.package-data]
"jupyter_workflow.config" = ["schemas/v1.0/*.json"]
"jupyter_workflow.ipython" = ["kernelspec/kernel.js"]

[tool.codespell]
ignore-words-list = "inout"

[tool.coverage.paths]
executor = ["jupyter_workflow/streamflow/executor.py", "/tmp/streamflow/*/executor.py"]

[tool.coverage.run]
branch = true
source_pkgs = ["jupyter_workflow"]

[tool.coverage.report]
exclude_lines = [
    # Exclude not implemented methods
    "raise NotImplementedError",
    # Exclude abstract methods
    "@(abc\\.)?abstractmethod",
    # Exclude Python script entrypoints
    "if __name__ == .__main__.:",
    # Exclude type checking lines
    "if TYPE_CHECKING:",
    # Exclude log messages
    "if logger.isEnabledFor"
]
ignore_errors = true
omit = [
    "jupyter_workflow/ipython/__main__.py",
    "tests/*"
]

[tool.isort]
profile = "black"